Resolved typo (inveractive, Julien)

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -1175,7 +1175,7 @@
     "\n",
     "<p style=\"line-height:1.25;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;color:#696969\">\n",
     "<b><i>\n",
-    "An inveractive Jupyter Notebook version of this blog post is also available throught MyBinder, and can be viewed <a href=\"https://mybinder.org/v2/gh/qMRLab/t1_notebooks/irblog?filepath=ir_blog%2FInversionRecovery.ipynb\">here</a>\n",
+    "An interactive Jupyter Notebook version of this blog post is also available throught MyBinder, and can be viewed <a href=\"https://mybinder.org/v2/gh/qMRLab/t1_notebooks/irblog?filepath=ir_blog%2FInversionRecovery.ipynb\">here</a>\n",
     "</i></b>\n",
     "</p>"
    ]
