Add hyperlink to figures (Nikola)

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -63,7 +63,7 @@
    },
    "source": [
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "Widely considered the gold standard for T<sub>1</sub> mapping, the inversion recovery technique estimates T<sub>1</sub> values by fitting the signal recovery curve acquired at different delays after an inversion pulse (180°). In a typical inversion recovery experiment (Figure 1), magnetization at thermal equilibrium is inverted using a 180° RF pulse. After the longitudinal magnetization recovers through spin-lattice relaxation for predetermined delay (“inversion time”, TI), a 90° excitation pulse is applied, followed by a readout imaging sequence (typically a spin-echo or gradient-echo readout) to create a snapshot of the longitudinal magnetization state at that TI. Inversion recovery was first developed for NMR in the 1940s (Hahn 1949, Drain 1949), and the first T<sub>1</sub> map was acquired using a saturation-recovery technique (90° as a preparation pulse instead of 180°) by Pykett and Mansfield in 1978. Some distinct advantages of inversion recovery is its large potential range of signal change (up to 2M<sub>0</sub>) and an insensitivity to pulse sequence parameter imperfections (Stikov 2015). Despite its proven robustness at measuring T<sub>1</sub>, inversion recovery is scarcely used in practice, because conventional implementations requires repetition times (TRs) on the order of 2 to 5 T<sub>1</sub> (Steen 1994), making it challenging to acquire whole-organ T<sub>1</sub> maps in a clinically feasible time. Nonetheless, it is continuously used as a reference measurement during the development of new techniques, or when comparing different T<sub>1</sub> mapping techniques, and several variations of the inversion recovery technique have been developed, making it practical for some applications.\n",
+    "Widely considered the gold standard for T<sub>1</sub> mapping, the inversion recovery technique estimates T<sub>1</sub> values by fitting the signal recovery curve acquired at different delays after an inversion pulse (180°). In a typical inversion recovery experiment (<a href=\"#fig1\">Figure 1</a>), magnetization at thermal equilibrium is inverted using a 180° RF pulse. After the longitudinal magnetization recovers through spin-lattice relaxation for predetermined delay (“inversion time”, TI), a 90° excitation pulse is applied, followed by a readout imaging sequence (typically a spin-echo or gradient-echo readout) to create a snapshot of the longitudinal magnetization state at that TI. Inversion recovery was first developed for NMR in the 1940s (Hahn 1949, Drain 1949), and the first T<sub>1</sub> map was acquired using a saturation-recovery technique (90° as a preparation pulse instead of 180°) by Pykett and Mansfield in 1978. Some distinct advantages of inversion recovery is its large potential range of signal change (up to 2M<sub>0</sub>) and an insensitivity to pulse sequence parameter imperfections (Stikov 2015). Despite its proven robustness at measuring T<sub>1</sub>, inversion recovery is scarcely used in practice, because conventional implementations requires repetition times (TRs) on the order of 2 to 5 T<sub>1</sub> (Steen 1994), making it challenging to acquire whole-organ T<sub>1</sub> maps in a clinically feasible time. Nonetheless, it is continuously used as a reference measurement during the development of new techniques, or when comparing different T<sub>1</sub> mapping techniques, and several variations of the inversion recovery technique have been developed, making it practical for some applications.\n",
     "</p>"
    ]
   },
@@ -75,7 +75,7 @@
    "source": [
     "<center style=\"line-height:1;font-family:timesnewroman;font-size:16px;\">\n",
     "<b>\n",
-    "Figure 1. Pulse sequence of an inversion recovery experiment.\n",
+    "<a name=\"fig1\" style=\"color:black;\">Figure 1.</a>  Pulse sequence of an inversion recovery experiment.\n",
     "</b>\n",
     "</center>\n",
     "\n",
@@ -130,7 +130,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "The simplicity of the signal model described by Eq. 3, both in its equation and experimental implementation, has made it the most widely used equation to describe the signal evolution in an inversion recovery T<sub>1</sub> mapping experiment. The magnetization curves are plotted in Figure 2 for near T<sub>1</sub> values of three different tissues in the brain. Note that in many practical implementations, magnitude-only images are acquired, so the signal measured would be proportional to the absolute value of Eq. 3.\n",
+    "The simplicity of the signal model described by Eq. 3, both in its equation and experimental implementation, has made it the most widely used equation to describe the signal evolution in an inversion recovery T<sub>1</sub> mapping experiment. The magnetization curves are plotted in <a href=\"#fig2\">Figure 2</a> for near T<sub>1</sub> values of three different tissues in the brain. Note that in many practical implementations, magnitude-only images are acquired, so the signal measured would be proportional to the absolute value of Eq. 3.\n",
     "</p>"
    ]
   },
@@ -216,7 +216,7 @@
    "source": [
     "<center style=\"line-height:1;font-family:timesnewroman;font-size:16px;\">\n",
     "<b>\n",
-    "    Figure 2. Inversion recovery curves (Eq. 2) for three different T<sub>1</sub> values, approximating the major types of tissues in the brain.\n",
+    "    <a name=\"fig2\" style=\"color:black;\">Figure 2.</a> Inversion recovery curves (Eq. 2) for three different T<sub>1</sub> values, approximating the major types of tissues in the brain.\n",
     "</b>\n",
     "</center>  "
    ]
@@ -332,7 +332,7 @@
    },
    "source": [
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "Practically, Eq. 1 is the better choice for simulating the signal of an inversion recovery experiment, as the TRs are often chosen to be greater than 5T<sub>1</sub> of the tissue-of-interest, which rarely coincides with the longest T<sub>1</sub> present (e.g. TR may be sufficiently long for white matter, but not for CSF which could also be present in the volume). Equation 3 also assumes ideal inversion pulses, which is rarely the case due to slice profile effects. Figure 3 displays the inversion recovery signal magnitude (complete relaxation normalized to 1) of an experiment with TR = 5 and T<sub>1</sub> values ranging between 250 ms to 5 s, calculated using both equations.\n",
+    "Practically, Eq. 1 is the better choice for simulating the signal of an inversion recovery experiment, as the TRs are often chosen to be greater than 5T<sub>1</sub> of the tissue-of-interest, which rarely coincides with the longest T<sub>1</sub> present (e.g. TR may be sufficiently long for white matter, but not for CSF which could also be present in the volume). Equation 3 also assumes ideal inversion pulses, which is rarely the case due to slice profile effects. <a href=\"#fig3\">Figure 3</a> displays the inversion recovery signal magnitude (complete relaxation normalized to 1) of an experiment with TR = 5 and T<sub>1</sub> values ranging between 250 ms to 5 s, calculated using both equations.\n",
     "<p/>"
    ]
   },
@@ -344,7 +344,7 @@
    "source": [
     "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
     "<b>\n",
-    "Figure 3. Signal recovery curves simulated using Eq. 3 (solid) and Eq. 1 (dotted) with a TR = 5 s for a T<sub>1</sub> values ranging between 250 ms to 5 s.\n",
+    "<a name=\"fig3\" style=\"color:black;\">Figure 3.</a> Signal recovery curves simulated using Eq. 3 (solid) and Eq. 1 (dotted) with a TR = 5 s for a T<sub>1</sub> values ranging between 250 ms to 5 s.\n",
     "</b>\n",
     "</center>"
    ]
@@ -545,11 +545,11 @@
    },
    "source": [
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "Several factors impact the choice of the inversion recovery fitting algorithm.  If only magnitude images are available, then a polarity-inversion is often implemented to restore the non-exponential magnitude curves (Figure 3) into the exponential form (Figure 2). This process is sensitive to noise due to the noise creating a non-zero level at the signal null, and the spacing of the TIs of the acquired data. If phase data is also available, then a phase term must be added to the fitting equation (Barral 2010). Equation 3 must only be used to fit data for the long TR regime (TR > 5·T<sub>1</sub>), which in practice is rarely satisfied for all tissues in subjects.\n",
+    "Several factors impact the choice of the inversion recovery fitting algorithm.  If only magnitude images are available, then a polarity-inversion is often implemented to restore the non-exponential magnitude curves (<a href=\"#fig3\">Figure 3</a>) into the exponential form (<a href=\"#fig2\">Figure 2</a>). This process is sensitive to noise due to the noise creating a non-zero level at the signal null, and the spacing of the TIs of the acquired data. If phase data is also available, then a phase term must be added to the fitting equation (Barral 2010). Equation 3 must only be used to fit data for the long TR regime (TR > 5·T<sub>1</sub>), which in practice is rarely satisfied for all tissues in subjects.\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "Early implementations of inversion recovery fitting algorithms were designed around the computational power available at the time. These included the “null method” (Pykett 1983), assuming that each T<sub>1</sub> value has unique zero-crossings (see Figure 2), and linear fitting of a rearranged version of Eq. 3 on a semi-log plot (Fukushima 1981). Nowadays, a non-linear least-squares fitting algorithm (e.g. Levenberg-Marquardt) is more appropriate, and can be applied to either approximate or general forms of the signal model (Eq. 3 or Eq. 1). More recent work by Barral et al (Barral 2010) demonstrated that T<sub>1</sub> maps can also be fitted much quicker (up to 75 times faster than using Levenberg-Marquardt) to fit  Eq. 1 – without a precision penalty – by using a reduced-dimension non-linear least squares (RD-NLS) algorithm. It was demonstrated that the following simplified 5-parameter equation can be sufficient for accurate T<sub>1</sub> mapping:\n",
+    "Early implementations of inversion recovery fitting algorithms were designed around the computational power available at the time. These included the “null method” (Pykett 1983), assuming that each T<sub>1</sub> value has unique zero-crossings (see <a href=\"#fig2\">Figure 2</a>), and linear fitting of a rearranged version of Eq. 3 on a semi-log plot (Fukushima 1981). Nowadays, a non-linear least-squares fitting algorithm (e.g. Levenberg-Marquardt) is more appropriate, and can be applied to either approximate or general forms of the signal model (Eq. 3 or Eq. 1). More recent work by Barral et al (Barral 2010) demonstrated that T<sub>1</sub> maps can also be fitted much quicker (up to 75 times faster than using Levenberg-Marquardt) to fit  Eq. 1 – without a precision penalty – by using a reduced-dimension non-linear least squares (RD-NLS) algorithm. It was demonstrated that the following simplified 5-parameter equation can be sufficient for accurate T<sub>1</sub> mapping:\n",
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px;margin-top:60px;margin-bottom:60px;\">\n",
@@ -559,7 +559,7 @@
     "</p>\n",
     "\n",
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "where <i>a</i> and <i>b</i> are complex values. If magnitude-only data is available, a 3-parameter model can be sufficient by taking the absolute value of Eq. 4.  While the RD-NLS algorithms are too complex to be presented here (the reader is referred to the paper, Barral 2010),  the code for these algorithms <a href=\"http://www-mrsrl.stanford.edu/~jbarral/t1map.html\">were released open-source</a> along with the original publication, and are also available as a <a href=\"https://github.com/neuropoly/qMRLab\">qMRLab</a> T<sub>1</sub> mapping model. One important thing to note about Eq. 4 is that it is general – no assumption is made about TR – and is thus as robust as Eq. 1 as long as all pulse sequence parameters other than TI are kept constant between each measurement. Figure 4 compares simulated data (Eq. 1) using a range of TRs (1.5·T<sub>1</sub> to 5·T<sub>1</sub>) fitted using either RD-NLS & Eq. 4 or a Levenberg-Marquardt fit of Eq. 2.\n",
+    "where <i>a</i> and <i>b</i> are complex values. If magnitude-only data is available, a 3-parameter model can be sufficient by taking the absolute value of Eq. 4.  While the RD-NLS algorithms are too complex to be presented here (the reader is referred to the paper, Barral 2010),  the code for these algorithms <a href=\"http://www-mrsrl.stanford.edu/~jbarral/t1map.html\">were released open-source</a> along with the original publication, and are also available as a <a href=\"https://github.com/neuropoly/qMRLab\">qMRLab</a> T<sub>1</sub> mapping model. One important thing to note about Eq. 4 is that it is general – no assumption is made about TR – and is thus as robust as Eq. 1 as long as all pulse sequence parameters other than TI are kept constant between each measurement. <a href=\"#fig4\">Figure 4</a> compares simulated data (Eq. 1) using a range of TRs (1.5·T<sub>1</sub> to 5·T<sub>1</sub>) fitted using either RD-NLS & Eq. 4 or a Levenberg-Marquardt fit of Eq. 2.\n",
     "</p>"
    ]
   },
@@ -571,7 +571,7 @@
    "source": [
     "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
     "<b>\n",
-    "Figure 4. Fitting comparison of simulated data (blue markers) with T<sub>1</sub> = 1 s and TR = 1.5 to 5 s, using fitted using RD-NLS & Eq. 4 (orange) and Levenberg-Marquardt & Eq. 2 (green, long TR approximation).\n",
+    "<a name=\"fig4\" style=\"color:black;\">Figure 4.</a> Fitting comparison of simulated data (blue markers) with T<sub>1</sub> = 1 s and TR = 1.5 to 5 s, using fitted using RD-NLS & Eq. 4 (orange) and Levenberg-Marquardt & Eq. 2 (green, long TR approximation).\n",
     "</b>\n",
     "</center>"
    ]
@@ -803,7 +803,7 @@
    },
    "source": [
     "<p style=\"line-height:2;font-family:timesnewroman;font-size:18px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
-    "The conventional inversion recovery experiment is considered the gold standard T<sub>1</sub> mapping technique for several reasons. A typical protocol has a long TR value and a sufficient number of inversion times for stable fitting (typically 5 or more) covering the range [0, TR]. It offers a wide dynamic range of signals (up to [-<i>k</i>M<sub>0</sub>, <i>k</i>M<sub>0</sub>]), providing a wide range of inversion times where high SNR is available to sample the signal recovery curve (Fukushima 1981). T<sub>1</sub> maps produced by inversion recovery are largely insensitive to inaccuracies in excitation flip angles and imperfect spoiling (Stikov 2015), as all parameters except TI are constant for each measurement and only a single acquisition is performed (at TI) during each TR. One important pulse sequence design consideration is to avoid acquiring at inversion times where the signal for T<sub>1</sub> values of the tissue-of-interest is nulled, as for magnitude images these voxels will be dominated by Rician noise which can negatively impact the fit the under low SNR circumstances (Figure 5). Inversion recovery can also often be acquired using commonly available standard pulse sequences available on most MRI scanners by setting up a customized acquisition protocol, and does not require any additional calibration measurements like a B<sub>1</sub> map.\n",
+    "The conventional inversion recovery experiment is considered the gold standard T<sub>1</sub> mapping technique for several reasons. A typical protocol has a long TR value and a sufficient number of inversion times for stable fitting (typically 5 or more) covering the range [0, TR]. It offers a wide dynamic range of signals (up to [-<i>k</i>M<sub>0</sub>, <i>k</i>M<sub>0</sub>]), providing a wide range of inversion times where high SNR is available to sample the signal recovery curve (Fukushima 1981). T<sub>1</sub> maps produced by inversion recovery are largely insensitive to inaccuracies in excitation flip angles and imperfect spoiling (Stikov 2015), as all parameters except TI are constant for each measurement and only a single acquisition is performed (at TI) during each TR. One important pulse sequence design consideration is to avoid acquiring at inversion times where the signal for T<sub>1</sub> values of the tissue-of-interest is nulled, as for magnitude images these voxels will be dominated by Rician noise which can negatively impact the fit the under low SNR circumstances (<a href=\"#fig5\">Figure 5</a>). Inversion recovery can also often be acquired using commonly available standard pulse sequences available on most MRI scanners by setting up a customized acquisition protocol, and does not require any additional calibration measurements like a B<sub>1</sub> map.\n",
     "</p>"
    ]
   },
@@ -815,7 +815,7 @@
    "source": [
     "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
     "<b>\n",
-    "Figure 5. Monte Carlo simulations (mean and standard deviation (STD), blue markers) and fitted T<sub>1</sub> values (mean and STD, red and green respectively) generated for a T<sub>1</sub> value of 900 ms and 5 TI values linearly spaced across the TR (ranging from 1 to 5 s). A bump in T<sub>1</sub> STD occurs near TR = 3000 ms, which coincides with the TR where the second TI is located near a null point for this T<sub>1</sub> value. \n",
+    "<a name=\"fig5\" style=\"color:black;\">Figure 5.</a> Monte Carlo simulations (mean and standard deviation (STD), blue markers) and fitted T<sub>1</sub> values (mean and STD, red and green respectively) generated for a T<sub>1</sub> value of 900 ms and 5 TI values linearly spaced across the TR (ranging from 1 to 5 s). A bump in T<sub>1</sub> STD occurs near TR = 3000 ms, which coincides with the TR where the second TI is located near a null point for this T<sub>1</sub> value. \n",
     "</b>\n",
     "</center>"
    ]
@@ -1277,7 +1277,7 @@
     ]
    ],
    "panel": {
-    "displayed": false,
+    "displayed": true,
     "height": 0,
     "style": "side"
    },
