[BUG] Fix cropped datatooltip labels

--- a/ir_blog/InversionRecovery.ipynb
+++ b/ir_blog/InversionRecovery.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "kernel": "Python3",
-    "tags": [
-     "scratch"
-    ]
+    "kernel": "Python3"
    },
    "outputs": [],
    "source": [
@@ -242,19 +239,25 @@
     "wm = go.Scatter(\n",
     "    x = params[\"TI\"],\n",
     "    y = signal_WM,\n",
-    "    name = 'T<sub>1</sub> = 0.9 s (White Matter)'\n",
+    "    name = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
+    "    text = 'T<sub>1</sub> = 0.9 s (White Matter)',\n",
+    "    hoverinfo = 'x+y+text'\n",
     ")\n",
     "\n",
     "gm = go.Scatter(\n",
     "    x = params[\"TI\"],\n",
     "    y = signal_GM,\n",
-    "    name = 'T<sub>1</sub> = 1.5 s (Grey Matter)'\n",
+    "    name = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
+    "    text = 'T<sub>1</sub> = 1.5 s (Grey Matter)',\n",
+    "    hoverinfo = 'x+y+text'\n",
     ")\n",
     "\n",
     "csf = go.Scatter(\n",
     "    x = params[\"TI\"],\n",
     "    y = signal_CSF,\n",
-    "    name = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)'\n",
+    "    name = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
+    "    text = 'T<sub>1</sub> = 4.0 s (Cerebrospinal Fluid)',\n",
+    "    hoverinfo = 'x+y+text'\n",
     ")\n",
     "\n",
     "data = [wm, gm, csf]\n",
@@ -344,7 +347,7 @@
    "source": [
     "<center style=\"line-height:1.5;font-family:timesnewroman;font-size:16px;text-align:justify;margin-left:60px;margin-right:60px\">\n",
     "<b>\n",
-    "<a name=\"fig3\" style=\"color:black;\">Figure 3.</a> Signal recovery curves simulated using Eq. 3 (solid) and Eq. 1 (dotted) with a TR = 5 s for a T<sub>1</sub> values ranging between 250 ms to 5 s.\n",
+    "<a name=\"fig3\" style=\"color:black;\">Figure 3.</a> Signal recovery curves simulated using Eq. 3 (solid) and Eq. 1 (dotted) with a TR = 5 s for a T<sub>1</sub> values ranging between 0.25 to 5 s.\n",
     "</b>\n",
     "</center>"
    ]
@@ -423,7 +426,9 @@
     "        visible = False,\n",
     "        x = params[\"TI\"],\n",
     "        y = abs(signal_T1_Eq3[ii]),\n",
-    "        name = '[Eq. 3] – Long TR approximation') for ii in range(len(T1range))]\n",
+    "        name = '[Eq. 3] – Long TR approximation',\n",
+    "        text = '[Eq. 3] – Long TR approximation',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(T1range))]\n",
     "\n",
     "data1[3]['visible'] = True\n",
     "\n",
@@ -434,7 +439,9 @@
     "        line = dict(\n",
     "            color = ('rgb(22, 96, 167)'),\n",
     "            dash = 'dash'),\n",
-    "        name = '[Eq. 1] – General Equation') for ii in range(len(T1range))]\n",
+    "        name = '[Eq. 1] – General Equation',\n",
+    "        text = '[Eq. 1] – General Equation',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(T1range))]\n",
     "\n",
     "data2[3]['visible'] = True\n",
     "\n",
@@ -672,7 +679,9 @@
     "        mode = 'markers',\n",
     "        x = params[\"TI\"],\n",
     "        y = abs(np.squeeze(np.asarray(Mz_analytical[ii]))),\n",
-    "        name = 'Simulated data') for ii in range(len(TR))]\n",
+    "        name = 'Simulated data',\n",
+    "        text = 'Simulated data',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR))]\n",
     "\n",
     "data1[10]['visible'] = True\n",
     "\n",
@@ -681,7 +690,9 @@
     "        mode = 'lines',\n",
     "        x = params[\"TI\"],\n",
     "        y = abs(fitOutput_nlsq[ii,0] * (1 - 2*np.exp(-params['TI']/fitOutput_nlsq[ii,1]))),\n",
-    "        name = 'Fitted T1 [C(1-2*exp(-TI/T1))]:' + str(round(fitOutput_nlsq[ii,1])) + ' ms') for ii in range(len(TR))]\n",
+    "        name = '[C(1-2*exp(-TI/T<sub>1</sub>))] Fitted T<sub>1</sub>:' + str(round(fitOutput_nlsq[ii,1])) + ' ms',\n",
+    "        text = '[C(1-2*exp(-TI/T<sub>1</sub>))]',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR))]\n",
     "\n",
     "data2[10]['visible'] = True\n",
     "\n",
@@ -690,7 +701,9 @@
     "        mode = 'lines',\n",
     "        x = params[\"TI\"],\n",
     "        y = abs((fitOutput_barral[ii]['ra']+fitOutput_barral[ii]['rb']*np.exp(-params['TI']/fitOutput_barral[ii]['T1']))),\n",
-    "        name = 'Fitted T1 [ra+rb*exp(-TI/T1)]:' + str(round(fitOutput_barral[ii]['T1'])) + ' ms') for ii in range(len(TR))]\n",
+    "        name = '[ra+rb*exp(-TI/T<sub>1</sub>)] Fitted T<sub>1</sub>:' + str(round(fitOutput_barral[ii]['T1'])) + ' ms',\n",
+    "        text = '[ra+rb*exp(-TI/T<sub>1</sub>)]',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TR))]\n",
     "\n",
     "data3[10]['visible'] = True\n",
     "\n",
@@ -939,7 +952,9 @@
     "            color = ('rgb(22, 96, 167)'),\n",
     "            dash = 'dot'),\n",
     "        mode = 'markers',\n",
-    "        name = 'Monte Carlo simulated signal') for ii in range(len(TRrange))]\n",
+    "        name = 'Monte Carlo simulated signal',\n",
+    "        text = 'Monte Carlo simulated signal',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TRrange))]\n",
     "\n",
     "data1[28]['visible'] = True\n",
     "\n",
@@ -950,7 +965,9 @@
     "        line = dict(\n",
     "            color = ('rgb(247, 152, 19)'),\n",
     "            ),\n",
-    "        name = 'Noiseless signal') for ii in range(len(TRrange))]\n",
+    "        name = 'Noiseless signal',\n",
+    "        text = 'Noiseless signal',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(TRrange))]\n",
     "\n",
     "data2[28]['visible'] = True\n",
     "\n",
@@ -959,8 +976,11 @@
     "    x = TRrange,\n",
     "    y = meanT1,\n",
     "    name = 'Mean T<sub>1</sub> (s)',\n",
+    "    text = 'Mean T<sub>1</sub> (s)',\n",
+    "    hoverinfo = 'x+y+text',\n",
     "    xaxis='x2',\n",
     "    yaxis='y2') for ii in range(len(TRrange))]\n",
+    "\n",
     "data_meanT1[15]['visible'] = True\n",
     "\n",
     "data_stdT1 = [dict(\n",
@@ -968,6 +988,8 @@
     "    x = TRrange,\n",
     "    y = stdT1,\n",
     "    name = 'STD T<sub>1</sub> (s)',\n",
+    "    text = 'STD T<sub>1</sub> (s)',\n",
+    "    hoverinfo = 'x+y+text',\n",
     "    xaxis='x2',\n",
     "    yaxis='y3') for ii in range(len(TRrange))]\n",
     "\n",
